# fintech-core

./: .env.example  .env.tests  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  race_test.py
apps/core/management/commands/: create_default_superuser.py
apps/transactions/: admin.py  dto.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/transactions/management/commands/: seed_wallets.py
apps/transactions/migrations/: 0001_initial.py
nginx/: default.conf
project/: settings.py  urls.py
project/formats/ru/: formats.py
tests/: conftest.py  race_tests.py  transfer_tests.py
